Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -676,5 +676,9 @@ Sei $G$ von der Form $\word{(\wall x}_iH\word{)}$ oder $\word{(\wexist x}_iH\wor
     \item Die Formel $G$ ist \important{geschlossen}, wenn $fv(G)=\set{}$
 \end{itemize}
 
+\subsection{Substitutionen}
+\begin{itemize}
+    \item $\sigma$ %Seite 33
+\end{itemize}
 
 \end{document}
